WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272480
AX: Crash caused by multiple concurrent calls to WebKit::WebProcessPool::setMediaAccessibilityPreferences.
https://bugs.webkit.org/show_bug.cgi?id=272480
Summary
AX: Crash caused by multiple concurrent calls to WebKit::WebProcessPool::setM...
Andres Gonzalez
Reported
2024-04-10 14:10:51 PDT
.
Attachments
Patch
(2.08 KB, patch)
2024-04-10 14:24 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-10 14:11:02 PDT
<
rdar://problem/126231173
>
Andres Gonzalez
Comment 2
2024-04-10 14:12:45 PDT
rdar://125614396
Andres Gonzalez
Comment 3
2024-04-10 14:24:53 PDT
Created
attachment 470855
[details]
Patch
EWS
Comment 4
2024-04-11 07:51:21 PDT
Committed
277384@main
(56656a1bfcc6): <
https://commits.webkit.org/277384@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470855
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug