AX: Crash caused by multiple concurrent calls to WebKit::WebProcessPool::setMediaAccessibilityPreferences. https://bugs.webkit.org/show_bug.cgi?id=272480 rdar://125614396

Reviewed by Tyler Wilcock.

The idea of this change is to dispatch the block in setMediaAccessibilityPreferences to a new serial queue instead of to the global queue in order to avoid multiple threads performing the work item concurrently.
Contribution from Greg Hughes.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::setMediaAccessibilityPreferences):

Canonical link: https://commits.webkit.org/277384@main